--- a/templates/margarita.html
+++ b/templates/margarita.html
@@ -150,8 +150,8 @@
 					<li id="queuedChangesButtonViewRegion"></li>
 					<li id="toggleHideCommonButtonViewRegion"></li>
 				</ul>
-
 				<div id="rgn-search"></div>
+				<a href="?slo" class="btn btn-sm btn-danger">Logout</a>
 			</div>
 		</div>
 	</div>
